完成品/error.txt
  File "dummy.py", line 3
    print 'oooo'
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print('oooo')?
